    Hargreaves to explicitly pass -I. to perl.  This is to
    assist with the fix for CVE-2016-1238.  (Closes: #832436)
  * dh_install: Clarify that "debian/not-installed" is not
    related to the --exclude parameter.
  * dh_install: Apply patch from Sven Joachim to support
    the "debian/tmp" prefix being optional in
    "debian/not-installed".  (Closes: #815506)

 -- Niels Thykier <niels@thykier.net>  Sat, 09 Jul 2016 11:51:46 +0000

debhelper (9.20160709) unstable; urgency=medium

  * Explicitly Build-Depends on perl:any for pod2man instead
    of relying on it implicitly via libdpkg-perl.
  * dh_shlibdeps: Clarify that -L is also useful for packages
    using debian/shlibs.local for private libraries.
  * dh_installdocs: Apply patch from Sven Joachim to fix a
    regression with --link-doc and installing extra
    documentation.  (Closes: #830309)
  * Apply patches from Michael Biebl to merge dh_systemd_enable
    and dh_systemd_start from the dh-systemd package.
    (Closes: #822670)
  * dh: Enable the systemd helpers by default in compat 10 and
    later.

 -- Niels Thykier <niels@thykier.net>  Sat, 09 Jul 2016 09:53:02 +0000

debhelper (9.20160702) unstable; urgency=medium

  * Start on compat 11.
  * dh_installmenu: Stop installing menu files in compat 11
    (menu-methods are still installed).
  * dh_*: Deprecate -s in favor of -a.  The -s option is
    removed in compat 11.
  * dh_strip: Fix regression in 9.20160618, which caused
    issues when there were hardlinked ELF binaries in a
    package.  Thanks to Sven Joachim for the report, the
    analysis/testing and for providing a patch for the
    most common case.  (Closes: #829142)
  * Dh_Lib.pm: Cope with the parallel options in make 4.2.
    Thanks to Martin Dorey for the report.  (Closes: #827132)
  * dh_installdocs: In compat 11, install documentation into
    /usr/share/doc/mainpackage as requested by policy 3.9.7.
    Thanks to Sandro Knauß for the report.  (Closes: #824221)