@@ -16,6 +16,10 @@ debhelper (9.20160709+unreleased) UNRELEASED; urgency=medium
   * dh_install: Apply patch from Sven Joachim to support
     the "debian/tmp" prefix being optional in
     "debian/not-installed".  (Closes: #815506)
+  * Dh_Lib.pm: Apply patch from Dominic Hargreaves to set
+    PERL_USE_UNSAFE_INC to fix a further set of packages
+    which fail to build with . removed from @INC.
+    (Closes: #832436)
 
  -- Niels Thykier <niels@thykier.net>  Sat, 09 Jul 2016 11:51:46 +0000
 
